# deepdive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: __init__.py  ids.py
backend/agent/: __init__.py  compaction.py  context.py  context_items.py  context_manager.py  (+7 more)
docs/: PROPOSAL.md
frontend/: .env.example  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
profiles/: repository_architecture_review.md
prompts/: compact.md  developer.md  system.md
tests/: __init__.py  conftest.py  test_agent_core.py  test_agent_repository.py  test_agent_worker_runtime.py  test_analysis_service_events.py  test_analysis_worker.py  test_api.py  test_api_documents.py  test_api_runtime.py  test_api_sse_replay.py  test_app_factory.py  test_auth_api.py  test_auth_bootstrap.py  test_backend_contracts.py  test_batch_scheduler_worker.py  test_cache.py  test_compose_config.py  test_db_migrations.py  test_db_schema.py  test_document_api.py  test_document_repository.py  test_document_tools.py  test_env_config.py  test_event_driven_path.py  test_event_repositories.py  test_event_runtime.py  test_events.py  test_execution_tools.py  test_execution_worker_runtime.py  test_jsonb_bindparams.py  test_kafka_events.py  test_live_stream.py  test_local_pipeline.py  test_model_stream_payloads.py  test_openai_runner.py  test_password_hash_cli.py  test_postgres_analysis_service.py  test_project_contracts.py  test_snapshot_builder.py  (+8 more)
(+186 files in other folders)
