[project]
name = "deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "fastapi>=0.136.1",
    "minio>=7.2.20",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "websocket-client>=1.9.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
