[project]
name = "deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "fastapi>=0.136.3",
    "minio>=7.2.20",
    "psycopg[binary]>=3.3.4",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "websocket-client>=1.9.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["backend", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
    "C4",
    "SIM",
    "PIE",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["backend"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "build",
    "dist",
]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
